add new Security, Jpa, MySQL project by JavaBrain