@@ -1,36 +1,46 @@
 package com.example.security.model;
 
-import com.example.entities.Users;
+import com.example.entities.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
-public class SecurityUser implements UserDetails {
+public class CustomUserDetails implements UserDetails {
+    
+    private String userName;
+    private String password;
+    private boolean active;
+    private String roles;
 
-    private final Users users;
+    public CustomUserDetails() {
+    }
 
-    public SecurityUser(Users users) {
-        this.users = users;
+    public CustomUserDetails(User user) {
+        this.userName = user.getUsername();
+        this.password = user.getPassword();
+        this.active = user.isActive();
+        this.roles = user.getRoles();
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        SimpleGrantedAuthority grantedAuthority = new SimpleGrantedAuthority("read");
-
-        return List.of(grantedAuthority);
+        
+        return Arrays.asList(new SimpleGrantedAuthority(roles));
     }
 
     @Override
     public String getPassword() {
-        return users.getPassword();
+        return password;
     }
 
     @Override
     public String getUsername() {
-        return users.getUsername();
+        return userName;
     }
 
     @Override
@@ -50,6 +60,8 @@ public class SecurityUser implements UserDetails {
 
     @Override
     public boolean isEnabled() {
-        return true;
+        return active;
     }
+
+
 }
